--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@babel/runtime": "^7.8.4",
     "core-js": "^3.6.4",
+    "pixi-inspector": "^2.0.1",
     "pixi.js": "^5.2.1"
   },
   "devDependencies": {
